--- a/views/login.html
+++ b/views/login.html
@@ -43,53 +43,19 @@
     <form action="/signup" method="post"  class="container">
         <div >
             <div class="form-group">
-                <label for="name">Name :</label>
-                <input type="text" name="name">
-            </div>
-            <div class="form-group">
                 <label for="email">Email :</label>
                 <input type="email" name="email">
-            </div>
-            <div class="form-group">
-                <label for="email">Phone no :</label>
-                <input type="number" name="phone">
             </div>
             <div class="form-group">
                 <label for="password">password :</label>
                 <input type="password" name="password">
             </div>
             <div class="form-group">
-                <p><a href="http://localhost:3000/login">Already signed up?</a></p>
+                <p><a href="http://localhost:3000/signup">Sign Up</a></p>
             </div>
             <button type="submit" class="submit-btn">Sign Up</button>
         </div>
     </form>
 </body>
-<script>
-        document.querySelector("form").addEventListener("submit", async function (event) {
-        event.preventDefault();
 
-        const formData = new FormData(this);
-        const formObject = Object.fromEntries(formData.entries());
-
-        try {
-            const response = await fetch("http://localhost:3000/signup", {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify(formObject),
-            });
-
-            const data = await response.json();
-
-            if (response.ok) {
-                alert("Signed up successfully!");
-            } else {
-                alert(data.message);
-            }
-        } catch (error) {
-            console.error("Error:", error);
-            alert("Something went wrong!");
-        }
-        })
-</script>
 </html>
