--- a/views/login.html
+++ b/views/login.html
@@ -40,7 +40,7 @@
     </style>
 </head>
 <body>
-    <form action="/signup" method="post"  class="container">
+    <form action="/login" method="post"  class="container">
         <div >
             <div class="form-group">
                 <label for="email">Email :</label>
@@ -53,7 +53,7 @@
             <div class="form-group">
                 <p><a href="http://localhost:3000/signup">Sign Up</a></p>
             </div>
-            <button type="submit" class="submit-btn">Sign Up</button>
+            <button type="submit" class="submit-btn">Login In</button>
         </div>
     </form>
 </body>
